新增Map和queryString互转方法